{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 31,
  "lineage": "7dab107d-658d-7e6b-885b-4031f9e8430a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:network-acl/acl-05cdd74c4aa5d58e4",
            "default_network_acl_id": "acl-05cdd74c4aa5d58e4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05cdd74c4aa5d58e4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "269974744768",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-01f41ae793b3710d7",
              "subnet-0835bc297853743fc",
              "subnet-083928bab83968620",
              "subnet-09857e2a6b3556b9e",
              "subnet-09de7cd9f2378e535",
              "subnet-0ca4d2e22e5141123"
            ],
            "tags": {
              "Name": "hr-management-system-vpc-default",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-default",
              "Project": "hr-management-system"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:route-table/rtb-071de1ccb9dfd37ea",
            "default_route_table_id": "rtb-071de1ccb9dfd37ea",
            "id": "rtb-071de1ccb9dfd37ea",
            "owner_id": "269974744768",
            "propagating_vgws": null,
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "hr-management-system-vpc-default",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-default",
              "Project": "hr-management-system"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:security-group/sg-0afd24f0b8bd34474",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0afd24f0b8bd34474",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "269974744768",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-management-system-vpc-default",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-default",
              "Project": "hr-management-system"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065eb86fdb7bdb1ce",
            "arn": "arn:aws:ec2:ap-south-1:269974744768:elastic-ip/eipalloc-065eb86fdb7bdb1ce",
            "domain": "vpc",
            "id": "eipalloc-065eb86fdb7bdb1ce",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-224-13.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.224.13",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-ap-south-1a",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-ap-south-1a",
              "Project": "hr-management-system"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "eipalloc-065eb86fdb7bdb1ce",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:internet-gateway/igw-08def6cbf8ffa7643",
            "id": "igw-08def6cbf8ffa7643",
            "owner_id": "269974744768",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc",
              "Project": "hr-management-system"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "igw-08def6cbf8ffa7643",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065eb86fdb7bdb1ce",
            "association_id": "eipassoc-03949b830e82aa0ef",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b7e5d7298939c780",
            "network_interface_id": "eni-04923c5961a647503",
            "private_ip": "10.0.1.4",
            "public_ip": "15.207.224.13",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09857e2a6b3556b9e",
            "tags": {
              "Name": "hr-management-system-vpc-ap-south-1a",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-ap-south-1a",
              "Project": "hr-management-system"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "nat-0b7e5d7298939c780",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0377b581b7b9c5cfc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b7e5d7298939c780",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0377b581b7b9c5cfc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0377b581b7b9c5cfc"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08def6cbf8ffa7643",
            "id": "r-rtb-08ca39b3b7681033b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-08ca39b3b7681033b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-08ca39b3b7681033b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:route-table/rtb-0377b581b7b9c5cfc",
            "id": "rtb-0377b581b7b9c5cfc",
            "owner_id": "269974744768",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "hr-management-system-vpc-private",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-private",
              "Project": "hr-management-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtb-0377b581b7b9c5cfc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:route-table/rtb-08ca39b3b7681033b",
            "id": "rtb-08ca39b3b7681033b",
            "owner_id": "269974744768",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "hr-management-system-vpc-public",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-public",
              "Project": "hr-management-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtb-08ca39b3b7681033b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02691ba47f20b16cc",
            "region": "ap-south-1",
            "route_table_id": "rtb-0377b581b7b9c5cfc",
            "subnet_id": "subnet-01f41ae793b3710d7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtbassoc-02691ba47f20b16cc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcf2260da597bc9b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0377b581b7b9c5cfc",
            "subnet_id": "subnet-09de7cd9f2378e535"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtbassoc-0bcf2260da597bc9b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0904046fa69680bdb",
            "region": "ap-south-1",
            "route_table_id": "rtb-0377b581b7b9c5cfc",
            "subnet_id": "subnet-0cc26722b25571d61"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtbassoc-0904046fa69680bdb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fb981cd2905ccc8",
            "region": "ap-south-1",
            "route_table_id": "rtb-0377b581b7b9c5cfc",
            "subnet_id": "subnet-0d38e65372326623a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtbassoc-03fb981cd2905ccc8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036ccee465000d49c",
            "region": "ap-south-1",
            "route_table_id": "rtb-0377b581b7b9c5cfc",
            "subnet_id": "subnet-09ddd7aa83f1a0267"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtbassoc-036ccee465000d49c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff32a2c6b8bf361b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0377b581b7b9c5cfc",
            "subnet_id": "subnet-083928bab83968620"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtbassoc-0ff32a2c6b8bf361b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0746368e97ab70ea6",
            "region": "ap-south-1",
            "route_table_id": "rtb-08ca39b3b7681033b",
            "subnet_id": "subnet-09857e2a6b3556b9e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtbassoc-0746368e97ab70ea6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068979cb8a0454d25",
            "region": "ap-south-1",
            "route_table_id": "rtb-08ca39b3b7681033b",
            "subnet_id": "subnet-0835bc297853743fc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtbassoc-068979cb8a0454d25",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce2ce52a35a86505",
            "region": "ap-south-1",
            "route_table_id": "rtb-08ca39b3b7681033b",
            "subnet_id": "subnet-0ca4d2e22e5141123"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "rtbassoc-0ce2ce52a35a86505",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:subnet/subnet-01f41ae793b3710d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f41ae793b3710d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269974744768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-db-ap-south-1a",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-db-ap-south-1a",
              "Project": "hr-management-system"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "subnet-01f41ae793b3710d7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:subnet/subnet-09de7cd9f2378e535",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09de7cd9f2378e535",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269974744768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-db-ap-south-1b",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-db-ap-south-1b",
              "Project": "hr-management-system"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "subnet-09de7cd9f2378e535",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:subnet/subnet-0cc26722b25571d61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc26722b25571d61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269974744768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-db-ap-south-1c",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-db-ap-south-1c",
              "Project": "hr-management-system"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "subnet-0cc26722b25571d61",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:subnet/subnet-0d38e65372326623a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d38e65372326623a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269974744768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-private-ap-south-1a",
              "Project": "hr-management-system",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-private-ap-south-1a",
              "Project": "hr-management-system",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "subnet-0d38e65372326623a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:subnet/subnet-09ddd7aa83f1a0267",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ddd7aa83f1a0267",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269974744768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-private-ap-south-1b",
              "Project": "hr-management-system",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-private-ap-south-1b",
              "Project": "hr-management-system",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "subnet-09ddd7aa83f1a0267",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:subnet/subnet-083928bab83968620",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083928bab83968620",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269974744768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-private-ap-south-1c",
              "Project": "hr-management-system",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-private-ap-south-1c",
              "Project": "hr-management-system",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "subnet-083928bab83968620",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:subnet/subnet-09857e2a6b3556b9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09857e2a6b3556b9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269974744768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-public-ap-south-1a",
              "Project": "hr-management-system",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-public-ap-south-1a",
              "Project": "hr-management-system",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "subnet-09857e2a6b3556b9e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:subnet/subnet-0835bc297853743fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0835bc297853743fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269974744768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-public-ap-south-1b",
              "Project": "hr-management-system",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-public-ap-south-1b",
              "Project": "hr-management-system",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "subnet-0835bc297853743fc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:subnet/subnet-0ca4d2e22e5141123",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca4d2e22e5141123",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269974744768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc-public-ap-south-1c",
              "Project": "hr-management-system",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc-public-ap-south-1c",
              "Project": "hr-management-system",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b30e8a9aa3a2ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "subnet-0ca4d2e22e5141123",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:269974744768:vpc/vpc-00b30e8a9aa3a2ddf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05cdd74c4aa5d58e4",
            "default_route_table_id": "rtb-071de1ccb9dfd37ea",
            "default_security_group_id": "sg-0afd24f0b8bd34474",
            "dhcp_options_id": "dopt-0d204f5fd7d38e6a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b30e8a9aa3a2ddf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071de1ccb9dfd37ea",
            "owner_id": "269974744768",
            "region": "ap-south-1",
            "tags": {
              "Name": "hr-management-system-vpc",
              "Project": "hr-management-system"
            },
            "tags_all": {
              "Name": "hr-management-system-vpc",
              "Project": "hr-management-system"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "269974744768",
            "id": "vpc-00b30e8a9aa3a2ddf",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}